<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_logo_popup"
        android:scaleType="fitXY"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:src="@drawable/img_logo_popup" />

    <TextView
        android:id="@+id/alert_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_below="@id/img_logo_popup"
        tools:text="공유 받은 카드를 \n저장하시겠어요? \n test"
        android:textSize="16dp"
        android:textColor="@color/black_cc" />

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="30dp"
            android:layout_alignParentRight="true"
            android:text="@string/confirm"
            android:textStyle="bold"
            android:textColor="#d41468"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:layout_toLeftOf="@id/confirm_button"
            android:textStyle="bold"
            android:textColor="#d41468"
            android:textSize="16dp" />

    </RelativeLayout>

</RelativeLayout>