...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:id="@+id/new_category_header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="19dp"
        android:layout_height="45dp"
        app:layout_widthPercent="90%"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/left_arrow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="5dp"
...
