...
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:src="@drawable/icon_bus_menu" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:text="@string/new_category_name"
        android:textColor="@color/white"
...
