<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rectangle_shape"
        android:elevation="10dp"
        app:layout_constraintHeight_percent="0.84"
        app:layout_constraintWidth_percent="0.78"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.81">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/card_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <angeltalk.plus.presentation.custom.VideoCardTextureView
                    android:id="@+id/card_video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/play_button"
                    android:layout_width="87dp"
                    android:layout_height="87dp"
                    android:layout_gravity="center"
                    android:alpha="0.5"
                    android:src="@drawable/btn_preview"
                    android:visibility="gone" />

            </FrameLayout>

        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/card_image_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/black_99"
            android:textSize="22dp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintHeight_percent="0.19"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="@style/DefaultFont"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/card_image_title_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/require_card_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black_99"
            android:textColorHint="@color/black_33"
            android:textCursorDrawable="@drawable/make_card_cursor_color"
            android:textSize="22dp"
            android:visibility="gone"
            app:layout_constraintHeight_percent="0.19"
            android:textAppearance="@style/DefaultFont"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>