<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/category_item_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <angeltalk.plus.presentation.custom.CardTitleLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.2" />

    <angeltalk.plus.presentation.custom.CardViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/title_container"
        app:layout_constraintHeight_percent="0.648" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.152">

        <ImageButton
            android:id="@+id/card_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_edit" />

        <ImageButton
            android:id="@+id/card_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_card_delete" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

