...
            android:text="@string/record_card_name"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/mic_btn"
            android:layout_width="62dp"
            android:layout_height="62dp"
            app:layout_marginTopPercent="84%"
            android:layout_centerHorizontal="true"
            android:background="@drawable/mic"
            android:visibility="gone"/>
...
                android:textSize="22dp"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:visibility="gone" />

            <Button
                android:id="@+id/record_stop_button"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_centerInParent="true"
                android:background="@drawable/record_stop"
                android:visibility="gone" />

...
